fixed quiz buttons and some spacing

--- a/src/styles/elements/_wp-quiz.scss
+++ b/src/styles/elements/_wp-quiz.scss
@@ -43,6 +43,7 @@
     padding: 0;
     background-color: transparent !important;
     border: none;
+    margin-top: 2rem;
 
     .wq-result-quiz-title {
       display: none;
@@ -50,6 +51,27 @@
 
     .wq-result-title {
       font: $h3;
+    }
+    .gform_wrapper {
+      margin: 0;
+      margin-top: 2rem;
+    }
+    .gform_footer {
+      align-items: flex-start;
+    }
+
+    .gform_wrapper
+      input:not([type="radio"]):not([type="checkbox"]):not([type="submit"]):not([type="button"]):not([type="image"]):not([type="file"]) {
+      width: auto !important;
+    }
+    .gform_button {
+      margin: 0 !important;
+      margin-top: 2rem !important;
+    }
+  }
+  .wq-retake-quiz-btn {
+    br {
+      display: none;
     }
   }
 }
